Cambios de font y titulo

--- a/fg.html
+++ b/fg.html
@@ -28,9 +28,9 @@
   <title>Servicios de Comunicación Digital: Desarrollo Web, Aplicaciones, Consultoría y Rediseño Web |
     franco°guevara - digital bespoke</title>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cutive&family=Cutive+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cutive&family=Cutive+Mono&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 </head>
 
@@ -44,7 +44,7 @@
       <div class="main-content" id="scroll-container">
         <div class="tira">
           <div class="colcontent1">
-            <h1 class="titulo">Conectando lo tradicional con lo moderno:<br>Soluciones Digitales que Transforman</h1>
+            <h1 class="titulo">Conectando lo tradicional con lo moderno:<br><p>Soluciones Digitales que Transforman</p></h1>
           </div>
           <div class="colcontent"><p>contenido2</p></div>
           <div class="colcontent"><p>contenido3</p></div>
