ajuste sidebar sombra y margin-top

--- a/fg.html
+++ b/fg.html
@@ -77,7 +77,7 @@
     scrollContainer.addEventListener('scroll', function () {
       if (scrollContainer.scrollLeft > 0) {
         
-        sidebar.style.boxShadow = 'rgba(0, 0, 0, 0.10) 2px 2.6px';
+        sidebar.style.boxShadow = 'rgba(0, 0, 0, 0.10) 2px 4px 8px';
       } else {
       
         sidebar.style.boxShadow = 'none';
