fix: background texture

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
   <div class="wrapper">
     <div class="content">
       <div class="sidebar" id="sidebar">
-        <img src="img/logov2.svg">
+        <img src="img/logov2.svg" alt="logotipo">
       </div>
       <div class="main-content" id="scroll-container">
         <div class="tira">
           <div class="colcontent1">
-            <h1 class="titulo">Conectando lo tradicional <br>con lo moderno:<br><span>Soluciones Digitales que Transforman</span><br>Digital Bespoke</h1>
+            <h1 class="titulo">Conectando lo tradicional <br>con lo moderno:<br><span>Soluciones Digitales que Transforman</span></h1>
           </div>
           <div class="colcontent"><p>contenido2</p></div>
           <div class="colcontent"><p>contenido3</p></div>
